--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,55 +22,18 @@
 
 </head>
 <body>
+    <!---lisätään PartialView-->
+    @{
+        if (Session["UserName"] == null)
+        {
+            Html.RenderPartial("_NavBarLoggedOut");
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">TilausDB (@ViewBag.LoggedStatus)</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor02">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="~/Home/Index">
-                            Home
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Home/About">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Home/Map">Map</a>
-                    </li>
-                  
-
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Applications</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="~/Asiakkaats/Index">Customers</a>
-                            <a class="dropdown-item" href="~/Tuotteet/Index">Products</a>
-
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Login</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="~/Home/Login">Login(@Session["UserName"])</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="~/Home/Logout">Logout</a>
-                        </div>
-                    </li>
-                </ul>
-                
-            </div>
-        </div>
-    </nav>
+        }
+        else
+        {
+            Html.RenderPartial("_NavBarLoggedIn");
+        }
+    }
 
 
 
